# rocket-os

./: .bash_profile  .bashrc  .gitignore  .gitmodules  .vimrc  Dockerfile  README.md  bag2csv.py  params.yaml  socket_reader.py
lcs-networking/: client.py  server.py
lcs-networking/v2/: client.py  server.py
logs/: .gitignore  bag_merge.py  bag_surgery.py  sort.py
logs/COLDFLOWLOG_4_26_2021/: LOG_2020-04-25-16-51-22_0.bag  LOG_2020-04-25-16-51-44_0.bag  (+15 more)
pythonLED/: adc-test.py  copcars.py  gpio-test.py  leds-are-annoying.py  motor-test.py  onboard-led.py  simple-LED-output.py  str2led.py
src/: .gitignore
src/examples/: CMakeLists.txt  package.xml
src/examples/scripts/: bare_bones_node.py
src/examples/src/: bare_bones_node.cpp
src/hardware/: CMakeLists.txt  package.xml
src/hardware/launch/: abort_valve.launch  combustion_thermocouple_1.launch  combustion_thermocouple_2.launch  combustion_transducer.launch  dispatcher.launch  drivers.launch  ematch.launch  ematch_driver.launch  float_switch.launch  hardware.launch  ignition_valve_driver.launch  injection_valve.launch  linear_actuator.launch  ox_tank_transducer.launch  scheduler.launch  sensors.launch  solenoid.launch  solenoid_driver.launch  vent_valve_driver.launch
src/hardware/msg/: DriverCommand.msg  MotorCommand.msg  SolenoidCommand.msg
src/hardware/scripts/: dispatcher.py  driverlib.py  ematch_driver.py  hardware_client.py  liquid_level_switch_driver.py  motor_driver.py  pressure_transducer_driver.py  pressure_transducer_driver.py.back  scheduler.py  sensor_monitor.py  solenoid_driver.py  thermocouple_driver.py
src/hardware/src/: barometer_driver.cpp  float_switch_driver.cpp  imu_driver.cpp  motor_driver.cpp  pressure_transducer_driver.cpp  solenoid_driver.cpp  thermocouple_driver.cpp
src/models/: CMakeLists.txt  package.xml
src/models/Matlab/: constants.hpp  constants_HRFS.m  include_HRFS.m  main_HRFS.m
src/models/Matlab/Functions/Modeling/: fHRFSdynamics_1D.m  hybridRocketThrustCalc.m  hybrid_thrust.cpp  hybrid_thrust.hpp  main.cpp  standard_atmosphere.hpp
src/models/Matlab/Functions/Modeling/Dynamics/: compute_drag.cpp
src/models/Matlab/Functions/Numerical-Methods/: cubicspline.m  cubicsplineInterp.m  cubicsplineSolve.m  finitedifference.m  gausselimination.m  rungekuttaint.m  secant_root_solve.hpp  secantrootsolve.m
src/models/Matlab/Misc/: anonymousFuncSecondArg.m  design_hybridRocketMotor.m
src/models/Matlab/Test/: Test_All.m
src/models/Matlab/Test/Modeling/: Test_fHRFSdynamics_1D.m
src/models/Matlab/Test/Modeling/Ambient/: Test_stdAtmosphereCalc_hgp.m
src/models/Matlab/Test/Modeling/Dynamics/: Test_dragCalc.m
src/models/Matlab/Test/Modeling/RocketEngine/: Test_hybridRocketThrustCalc.m
src/models/Matlab/Test/Numerical-Methods/: Test_cubicsplineSolve.m  Test_finitedifference.m  Test_gausselimination.m  Test_rungekuttaint.m  Test_secantrootsolve.m
src/models/include/: compute_drag.hpp  constants.hpp  echelon.hpp  lambda  levenshtein.hpp  matrix.hpp  models  norm.hpp  runge_kutta_integration.hpp  secant_root_solve.hpp  standard_atmosphere.hpp
src/models/include/functions/modeling/: standard_atmosphere.hpp
src/models/include/math/: axis_angle.hpp  complex.hpp  decomposition.hpp  dynamic_matrix.hpp  kalman_filter.hpp  models.hpp  quaternion.hpp  solve.hpp
src/models/include/modeling/: cubic_spline.hpp  runge_kutta_integration.hpp
src/models/launch/: models.launch
src/models/src/: Test_files.txt  axis_angle.cpp  cubic_spline.cpp  echelon.cpp  executable.cpp  levenshtein.cpp  main.cpp  models.cpp  pose_estimator.cpp  quaternion.cpp
src/models/src/Matlab/Functions/Modeling/: dragCalc.m  stdAtmosphereCalc_hgp.m
src/models/src/Matlab/Functions/Numerical-Methods/: secant_root_solve.hpp
src/models/src/Matlab/Misc/: finite_difference_calc.m
src/models/src/Matlab/Test/Numerical-Methods/: Test_cubicspline.m  Test_cubicsplineInterp.m
src/models/src/functions/modeling/: standard_atmosphere.cpp
src/models/src/math/: complex.cpp  dynamic_matrix.cpp  matrix.cpp  solve.cpp
src/models/src/modeling/: hybrid_thrust.cpp  secant_root_solve.cpp
src/models/tests/: complex_tests.cpp  dynamic_matrix_tests.cpp  kalman_tests.cpp  levenshtein_tests.cpp  matrix_tests.cpp  runge_kutta_tests.cpp  solve_tests.cpp
src/sensors/: CMakeLists.txt  package.xml
src/sensors/launch/: combustion_thermocouple_1.launch  combustion_thermocouple_2.launch  combustion_transducer.launch  float_switch.launch  ox_tank_thermocouple.launch  ox_tank_transducer.launch  sensors.launch
src/sensors/msg/: SensorReading.msg
src/sensors/scripts/: liquid_level_switch_driver.py  pressure_transducer_driver.py  sensor_monitor.py  sensor_monitor.py.back  thermocouple_driver.py
src/toplevel/: CMakeLists.txt  package.xml  rosconsole.conf
src/toplevel/launch/: all.launch  idiot.launch  listener.launch  logging.launch  readiness_admin.launch  toplevel.launch  watchdog.launch
src/toplevel/scripts/: binaydog.py  commands_sender.py  hw_cmdr.py  interactive_test.py  listener.py  readiness_admin.py  rocket_prep.py
src/toplevel/src/: watchdog.cpp
src/transmission/: CMakeLists.txt  package.xml  setup.py
src/transmission/include/transmission/: packet.hpp  serial.hpp  server.hpp  util.hpp
src/transmission/launch/: listen.launch
src/transmission/msg/: Packet.msg
src/transmission/scripts/: interested.py
src/transmission/src/: compiler.cpp  hexdump.cpp  main.cpp  packet.cpp  packet_broadcaster.cpp  play.cpp  pprintf.cpp  radio_driver.cpp  serial.cpp  server.cpp  util.cpp
src/transmission/srv/: AckPacket.srv
src/webserver/: CMakeLists.txt  package.xml
src/webserver/css/: styles.css
src/webserver/html/: console.html  index.html  vis.html
src/webserver/launch/: webserver.launch
src/webserver/scripts/: console.js  cowsay.py  exec.py  index.js  tcp_server.py  three.js  vis_server.py  vis_spewer.py  vis_tiny.py  webserver.py
src/webserver/scripts/sensorServer/: MainFile.html  SensorServer.py  SensorStuff.csv  SensorStuff.xlsx  sensor_display.html  testing3.5.py  testingSensor.py
(+1242 files in other folders)
