<?xml version="1.0"?>
<package format="2">
  <name>models</name>
  <version>1.0.0</version>
  <description>Mathematical models for the vehicle</description>

  <maintainer email="mmatth3@vt.edu">Matt Marti</maintainer>
  <maintainer email="jwade109@vt.edu">Wade Foster</maintainer>
  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
